[gd_scene load_steps=14 format=2]

[ext_resource path="res://content/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://content/gui/controls/InputUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://content/mainScene.gd" type="Script" id=5]
[ext_resource path="res://content/gfx/ShaderRect.gd" type="Script" id=7]
[ext_resource path="res://content/gui/DebugLabel.gd" type="Script" id=8]
[ext_resource path="res://content/gui/menus/SmartphoneMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://content/gui/menus/StartMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://content/gui/menus/GameMenu.tscn" type="PackedScene" id=11]
[ext_resource path="res://content/gui/menus/ConfigMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://content/areas/Living/LivingHomestreetArea/LivingHomestreetArea.tscn" type="PackedScene" id=13]
[ext_resource path="res://content/areas/Living/LivingPharmacystreetArea/LivingPharmacystreetArea.tscn" type="PackedScene" id=14]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float opacity = 0.0;

void fragment() {
	COLOR = vec4(0.0, 0.0, 0.0, opacity);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/opacity = 0.0

[node name="mainScene" type="Node2D"]
script = ExtResource( 5 )

[node name="InputUI" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 0 )

[node name="Areas" type="Node2D" parent="."]

[node name="LivingHomestreetArea" parent="Areas" instance=ExtResource( 13 )]
leaveLeftAreaPath = NodePath("../LivingPharmacystreetArea")
leaveLeftUpperPlayerPosition = Vector2( 11, 7 )
leaveLeftLowerPlayerPosition = Vector2( 11, 8 )

[node name="LivingPharmacystreetArea" parent="Areas" instance=ExtResource( 14 )]
position = Vector2( -945.476, 2.8396 )
leaveRightAreaPath = NodePath("../LivingHomestreetArea")
leaveRightUpperPlayerPosition = Vector2( 0, 7 )
leaveRightLowerPlayerPosition = Vector2( 0, 8 )

[node name="Overlays" type="Node2D" parent="."]
z_index = 10

[node name="ConfigMenu" parent="Overlays" instance=ExtResource( 12 )]
position = Vector2( 2036.54, 728.618 )

[node name="GameMenu" parent="Overlays" instance=ExtResource( 11 )]
position = Vector2( 2841.38, -652 )

[node name="SmartphoneMenu" parent="Overlays" instance=ExtResource( 9 )]
position = Vector2( 3193.46, 1314.42 )

[node name="StartMenu" parent="Overlays" instance=ExtResource( 10 )]
position = Vector2( 2040.11, -654.345 )

[node name="TransparentOverlay" type="Node2D" parent="Overlays"]

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 415.311, 548.884 )
speed = 4
animation_period = 0.15

[node name="ShaderRectNode2D" type="Node2D" parent="."]
z_index = 5

[node name="ShaderRect" type="ColorRect" parent="ShaderRectNode2D"]
material = SubResource( 2 )
margin_right = 768.0
margin_bottom = 1024.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLabel" type="Label" parent="."]
margin_left = -125.0
margin_top = 660.0
margin_right = 375.0
margin_bottom = 674.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
